Update little planet effect

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -98,7 +98,6 @@
             </div>
         </div>
     </div>
-
     <div class="container-fluid py-5" id="exterior">
         <div class="container py-5">
             <div class="row align-items-center">
@@ -122,7 +121,6 @@
             </div>
         </div>
     </div>
-
     <div class="container-fluid py-5" id="walkthrough">
         <div class="container py-5">
             <div class="row align-items-center">
@@ -146,7 +144,6 @@
             </div>
         </div>
     </div>
-
     <div class="container-fluid py-5" id="locationav">
         <div class="container py-5">
             <div class="row align-items-center">
@@ -167,19 +164,31 @@
             </div>
         </div>
     </div>
-    <!-- About End -->
-
-    <!-- Team Start -->
-    <div class="container-fluid py-5" id="team">
+    <div class="container-fluid py-5" id="cgi">
         <div class="container py-5">
-            <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-4">Technology & Distribution</h1>
+            <div class="row align-items-center">
+                <div class="col-lg-7">
+                    <video class="content-video w-100 h-100" autoplay loop muted playsinline>
+                        <source src="../video/Walkthrough.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-5">
+                    <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">CGI & Superimpose</h3>
+                    <h1 class="display-4 mb-3">See your <span class="text-primary">Vision</span><br>In <span class="text-primary">Motion</span> </h1>
+                    <p>Our Walkthrough videos present the quality materials, intelligent layout, and overall aesthetic that will define your environment.
+                    <br>
+                    <br>
+                    Observe the considered use of textures, the warmth of natural stone, the sophistication of polished metal, the comfort of luxurious fabrics, all expertly rendered to evoke a sense of premium quality and refined elegance. The careful placement of furniture and accessories highlights the design's functionality and flow, creating a space that is both beautiful and practical.
+                    <br>
+                    <br>
+                    Beyond the visual elements, the rendering communicates a commitment to sophisticated design and a thoughtful approach to creating an environment that enhances productivity, relaxation, or lifestyle. It’s a detailed preview that allows you to fully appreciate the design's impact and quality.
+                    </p>
+                </div>
             </div>
-            <p>360 production is transforming how businesses create and share visual content. This cutting-edge technology captures images in every direction using advanced 360-degree cameras. Once recorded, the images are skillfully edited to craft immersive experiences that allow viewers to explore different angles and perspectives, creating a sense of presence unlike any other.<br><br>All of our 360 virtual tour photographers always use the latest technology when it comes to photographing the client’s property, this is to ensure that we always produce the highest quality 360 interactive tour. And we constantly make sure that the area we are photographing is set up to the client’s requirements and branding. Preparation is always the key to 360-degree virtual tours, ensuring the area is neat, tidy and set up correctly.<br><br>
-            The next stage with the virtual tour is the production, this is where the magic begins. Once the 360 photographers have completed their side of the project, it is then handed over to our highly experience 360 panoramic programming team. In conjunction with the client’s brief, branding, including logo, font and corporate colours, they begin the process of putting their HD 360 virtual tour together. Whether it is a basic VR Tour, an interactive hotel 360, virtual tour college, or a virtual tour factory, our 360-degree virtual tours are representing the client, so it has to be perfect in every way.</p>
         </div>
     </div>
-    <!-- Team End -->
+    <!-- About End -->
+     
 
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
