--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
 
     <!-- About Start -->
     <div class="container-fluid py-5" id="about">
-        <div class="container py-5">
+        <div class="container py-">
             <div class="row align-items-center">
-                <div class="col-lg-5">
+                <div class="col-lg-7">
                     <!-- <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt=""> -->
                     <iframe class="img-fluid fluid-frame mb-4 mb-lg-0" width="100%" height="100%" frameborder="0" src="/little-planet"></iframe>
                 </div>
-                <div class="col-lg-7">
+                <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Unlock the World – Virtually</h3>
                     <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Experiences</span> for your Product</h1>
-                    <p>At Tech-Triq, we transform spaces into immersive experiences through cutting-edge virtual tour technology. We don't just create tours; we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before.</p>
-                    <h4 class="text-uppercase text-primary mb-3">Why work with us?</h4>
-                    <ul>
+                    <p>At Tech-Triq, we don't just create tours, we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before</p>
+                    <!-- <h4 class="text-uppercase text-primary mb-3">Why work with us?</h4> -->
+                    <!-- <ul>
                         <li>
                             <span class="text-bullet">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
                         </li>
@@ -120,8 +120,8 @@
                         <li>
                             <span class="text-bullet">Detailed Analytics: </span>Know your customers and behaviour with our detailed analytics
                         </li>
-                    </ul>
-                    <p>Our VR Services are able to convey complex business processes using a modular production process, intuitive interface design, and imaginative feature combinations — all tailored to enhance your marketing efforts across all digital platforms.</p>
+                    </ul> -->
+                    <br>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">See our Services</a>
                 </div>
             </div>
@@ -180,12 +180,64 @@
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="img/3d_services.jpg" alt="">
-                            <a class="btn btn-project-features" href="/3d-cad-services">
+                            <a class="btn btn-project-features" href="/3d-cad-services#interior">
                                 <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">3D CAD Services</h3>
+                            <h3 class="m-0">Interior Design Rendering</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Exterior Design Rendering</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Walkthrough Video</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Location A/V</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
+                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">CGI & Superimpose</h3>
                         </div>
                     </div>
                 </div>
@@ -255,6 +307,22 @@
         </div>
     </div>
     <!-- Gallery End -->
+
+    <!-- Team Start -->
+    <div class="container-fluid py-5" id="team">
+        <div class="container py-5">
+            <div class="section-title position-relative text-center">
+                <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">A Message</h3>
+                <h1 class="font-secondary display-4">From our Founder</h1>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-8">
+                    <!-- <img class="img-fluid" src="img/founder.jpg" alt=""> -->
+                    <iframe class="img-fluid fluid-frame mb-4 mb-lg-0" frameborder="0" src="https://drive.google.com/file/d/1UuOIIhNfcrBwMb3nCojru342KfPBPXVh/preview"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Testimonial Start -->
     <div class="container-fluid py-5" id="testimonial">
