--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Interactive 360 Virtual Tour</h3>
                     <h1 class="display-4 mb-3">Give your Buyers an <span class="text-primary">Unforgettable First Impression</span></h1>
-                    <p>Forget the frustrating limitations of a traditional viewing – an interactive virtual tour grants prospective buyers a truly remarkable sense of control. They aren’t passively observing; they’re the explorers, charting their own course through the space. They can linger over intricate details, zoom in on architectural flourishes, and meticulously examine every element at their own pace. No rushed appointments, no awkward silences – just the freedom to investigate every corner and truly understand the scale, the flow, and the potential of the property. It's about empowering the buyer to take the lead, fostering a feeling of confidence and ultimately, transforming a viewing into a deeply personal and deliberate experience.</p>
+                    <p>An interactive virtual tour allows prospective buyers to explore the property at their own pace. They can closely examine details, zoom in on features, and get a true sense of the space's scale and potential. This empowers buyers to take the lead, fostering confidence and transforming the viewing into a personalized, deliberate experience</p>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
                 </div>
             </div>
@@ -94,22 +94,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Engaging Property Presentation</h3>
                     <h1 class="display-4 mb-3">Immersive Complete <span class="text-primary">Interactive</span></h1>
-                    <p>Transforming property presentations with a 360 virtual tour elevates the experience from static images to an immersive journey. Viewers aren’t just <span class="text-primary">seeing</span> a property; they’re virtually <span class="text-primary">walking</span> through it, exploring every nook and cranny at their own pace</p>
-                    <ul>
-                        <li>
-                            <span class="text-bullet">Full Panoramic View: </span>A 360 tour captures a *complete* 360-degree view of the space, allowing you to see everything without moving your head
-                        </li>
-                        <li>
-                            <span class="text-bullet">High-Resolution Detail: </span>While the camera still has a resolution limit, 360 tours typically use high-resolution cameras, maximizing the amount of detail that can be captured
-                        </li>
-                        <li>
-                            <span class="text-bullet">Interactive Navigation: </span>You can literally "look around" the room – moving your gaze to explore every corner and feature
-                        </li>
-                        <li>
-                            <span class="text-bullet">Layered Information (Hotspots): </span>Crucially, you can add interactive hotspots that layer in additional information – floor plans, dimensions, details about appliances, etc. – enhancing the level of detail <span class="text-primary">immensely</span>
-                        </li>
-                    </ul>
-                    <p>360 virtual tours aren’t just a technological advancement – they’re a fundamental shift in how properties are presented and experienced</p>
+                    <p>A 360 virtual tour transforms property presentations from static images to an immersive experience. Viewers can explore every corner of the space, examining details and features at their own pace. The 360-degree view, high-resolution imagery, and interactive navigation create a comprehensive, engaging experience. Layered information, such as floor plans and appliance details, further enhances the level of detail.</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
@@ -273,17 +258,6 @@
     </div>
     <!-- Service End -->
 
-    <!-- Team Start -->
-    <div class="container-fluid py-5" id="team">
-        <div class="container py-5">
-            <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-4">Technology & Distribution</h1>
-            </div>
-            <p>360 production is transforming how businesses create and share visual content. This cutting-edge technology captures images in every direction using advanced 360-degree cameras. Once recorded, the images are skillfully edited to craft immersive experiences that allow viewers to explore different angles and perspectives, creating a sense of presence unlike any other.<br><br>All of our 360 virtual tour photographers always use the latest technology when it comes to photographing the client’s property, this is to ensure that we always produce the highest quality 360 interactive tour. And we constantly make sure that the area we are photographing is set up to the client’s requirements and branding. Preparation is always the key to 360-degree virtual tours, ensuring the area is neat, tidy and set up correctly.<br><br>
-            The next stage with the virtual tour is the production, this is where the magic begins. Once the 360 photographers have completed their side of the project, it is then handed over to our highly experience 360 panoramic programming team. In conjunction with the client’s brief, branding, including logo, font and corporate colours, they begin the process of putting their HD 360 virtual tour together. Whether it is a basic VR Tour, an interactive hotel 360, virtual tour college, or a virtual tour factory, our 360-degree virtual tours are representing the client, so it has to be perfect in every way.</p>
-        </div>
-    </div>
-    <!-- Team End -->
 
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
