--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -81,9 +81,9 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Aerial 360 Tour</h3>
                     <h1 class="display-4 mb-3">Discover the <span class="text-primary">Beauty</span> from Above</h1>
-                    <p>Unveil the Full Potential – Discover Beauty From Above. Step beyond the walls and experience your property like never before. Our aerial 360 imagery provides a breathtaking, panoramic view, revealing the surrounding landscape, stunning vistas, and the unique architectural features that truly set your property apart. *Imagine surveying rolling hills, sparkling water, or a captivating cityscape – all from the comfort of your screen.* This elevated perspective transforms a simple tour into a truly unforgettable experience, allowing you to fully appreciate the beauty and lifestyle that your property offers
+                    <p>Unveil the Full Potential. Discover Beauty From Above. Step beyond the walls and experience your property like never before. Our aerial 360 imagery provides a breathtaking, panoramic view, revealing the surrounding landscape, stunning vistas, and the unique architectural features that truly set your property apart. Imagine surveying rolling hills, sparkling water, or a captivating cityscape, all from the comfort of your screen. This elevated perspective transforms a simple tour into a truly unforgettable experience, allowing you to fully appreciate the beauty and lifestyle that your property offers
                     <br>
-                    <h4 class="text-primary">Don’t just see a house – experience its surroundings</h4></p>
+                    <h4 class="text-primary">Don’t just see a house, experience its surroundings</h4></p>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
                 </div>
             </div>
@@ -270,17 +270,6 @@
     </div>
     <!-- Service End -->
 
-    <!-- Team Start -->
-    <div class="container-fluid py-5" id="team">
-        <div class="container py-5">
-            <div class="section-title position-relative text-center">
-                <h1 class="font-secondary display-4">Technology & Distribution</h1>
-            </div>
-            <p>360 production is transforming how businesses create and share visual content. This cutting-edge technology captures images in every direction using advanced 360-degree cameras. Once recorded, the images are skillfully edited to craft immersive experiences that allow viewers to explore different angles and perspectives, creating a sense of presence unlike any other.<br><br>All of our 360 virtual tour photographers always use the latest technology when it comes to photographing the client’s property, this is to ensure that we always produce the highest quality 360 interactive tour. And we constantly make sure that the area we are photographing is set up to the client’s requirements and branding. Preparation is always the key to 360-degree virtual tours, ensuring the area is neat, tidy and set up correctly.<br><br>
-            The next stage with the virtual tour is the production, this is where the magic begins. Once the 360 photographers have completed their side of the project, it is then handed over to our highly experience 360 panoramic programming team. In conjunction with the client’s brief, branding, including logo, font and corporate colours, they begin the process of putting their HD 360 virtual tour together. Whether it is a basic VR Tour, an interactive hotel 360, virtual tour college, or a virtual tour factory, our 360-degree virtual tours are representing the client, so it has to be perfect in every way.</p>
-        </div>
-    </div>
-    <!-- Team End -->
 
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
