add signia tour

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="img/3d_services.jpg" alt="">
-                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                            <a class="btn btn-project-features" href="/3d-cad-services#walkthrough">
                                 <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
@@ -219,7 +219,7 @@
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="img/3d_services.jpg" alt="">
-                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                            <a class="btn btn-project-features" href="/3d-cad-services#locationav">
                                 <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
@@ -232,7 +232,7 @@
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="img/3d_services.jpg" alt="">
-                            <a class="btn btn-project-features" href="/3d-cad-services#exterior">
+                            <a class="btn btn-project-features" href="/3d-cad-services#cgi">
                                 <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
