--- a/little-planet/index.html
+++ b/little-planet/index.html
@@ -34,8 +34,8 @@
 	<div id="container">
 		<h1 class="text-center font-weight-bold" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: -1; width: 100%;">Loading...Please Wait</h1>
 	  <canvas style="width: 500px; height: 500px;"></canvas>
-	  <button id="changeView" class="btn btn-primary font-weight-bold btn-scroll">Cheange View</button>
-	  <button class="btn btn-primary font-weight-bold btn-scroll" onclick="window.open(url='//storage.net-fs.com/hosting/8311954/0/')">Explore this Tour</button>
+	  <button id="changeView" class="btn btn-primary font-weight-bold btn-scroll">Change View</button>
+	  <button class="btn btn-primary font-weight-bold btn-scroll" onclick="window.open(url='//tech-triq.com/tours/ambit/project_1/')">Experience this Tour</button>
 	  <!-- <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" style="position: absolute; bottom: 30px;" href="//storage.net-fs.com/hosting/8311954/0/">See our Services</a> -->
 	</div>
 
