modify content of VT pages

--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -128,7 +128,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Easy to Share</h3>
                     <h1 class="display-4 mb-3">Increased <span class="text-primary">Marketing Opportunities</span></h1>
-                    <p>Beyond the immersive experience, our virtual tours unlock a powerful marketing advantage. With a simple web link, you can instantly share the tour with your network, clients, colleagues, and potential buyers, eliminating the need for cumbersome email attachments or lengthy video uploads. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling a vibrant wave of interest and accelerating the sales process</p>
+                    <p>Our virtual tours provide a powerful marketing advantage - a simple web link allows you to instantly share the immersive experience with your network, clients, colleagues, and potential buyers. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling interest and accelerating the sales process</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
