--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Aerial 360 Tour</h3>
                     <h1 class="display-4 mb-3">Discover the <span class="text-primary">Beauty</span> from Above</h1>
-                    <p>Unveil the Full Potential. Discover Beauty From Above. Step beyond the walls and experience your property like never before. Our aerial 360 imagery provides a breathtaking, panoramic view, revealing the surrounding landscape, stunning vistas, and the unique architectural features that truly set your property apart. Imagine surveying rolling hills, sparkling water, or a captivating cityscape, all from the comfort of your screen. This elevated perspective transforms a simple tour into a truly unforgettable experience, allowing you to fully appreciate the beauty and lifestyle that your property offers
+                    <p>Our aerial 360 tours offer a breathtaking, panoramic view that showcases your property's stunning surroundings, architecture, and unique features. Discover the beauty from above and transform a simple tour into an unforgettable experience
                     <br>
                     <h4 class="text-primary">Don’t just see a house, experience its surroundings</h4></p>
                     <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
@@ -95,17 +95,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Aerial 360 Tour</h3>
                     <h1 class="display-4 mb-3">Empower Buyers with <span class="text-primary">Immersive</span> 360 Aerial Tour</h1>
-                    <p>Elevate Your Listings & Empower Your Buyers with Immersive 360 Virtual Tours – Our tours aren’t just a visual upgrade, they’re a strategic investment for both you and your clients.
-                    </p>
-                    <ul>
-                        <li>
-                            <span class="text-bullet">For Agents: </span>Showcase your properties with unparalleled detail, capture wider attention, reduce wasted showing appointments, and provide a valuable marketing asset
-                        </li>
-                        <li>
-                            <span class="text-bullet">For Buyers: </span> Experience the property before you visit, saving you time and effort, allowing for informed decision-making, and providing a comfortable and confident preview
-                        </li>
-                    </ul>
-                    <p>Utilizing high-resolution panoramic imagery, stabilized footage, and integrated heatmaps, our tours deliver a professional, engaging experience. Agents can track viewer engagement, identifying high-interest areas, while buyers benefit from a detailed, immersive preview – resulting in more qualified leads and a faster sales cycle.  Invest in the future of property marketing – request a demo today!</p>
+                    <p>Featuring high-resolution panoramic imagery, stabilized footage, and integrated heatmaps, these tours allow buyers to preview properties in detail before visiting, saving time and enabling more informed decision-making. Agents can also track viewer engagement to identify high-interest areas, resulting in more qualified leads and a faster sales cycle</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
@@ -126,10 +116,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Heatmaps - Data Analytics</h3>
                     <h1 class="display-4 mb-3">Understand What <span class="text-primary">Buyers</span> see</h1>
-                    <p>Our interactive 360 virtual tours don’t just offer a stunning visual experience, they provide valuable data about <span class="text-primary">how</span> viewers engage with your property. Utilizing sophisticated analytics, we generate dynamic heatmaps that visually represent the areas of greatest interest within the tour. These heatmaps reveal exactly where viewers spend the most time – highlighting the features that truly capture attention.
-                    <br>
-                    <br>
-                    Imagine seeing a concentration of heat around a breathtaking view, a gourmet kitchen, or a luxurious master suite. This data empowers you to understand your audience’s preferences, optimize your marketing strategy, and showcase the most desirable aspects of your property. Heatmaps provide a quantifiable measure of interest, allowing you to strategically highlight key features and drive stronger engagement</p>
+                    <p>Our 360 virtual tours generate dynamic heatmaps that visually represent areas of greatest interest. These heatmaps reveal where viewers spend the most time, highlighting the features that capture their attention - whether it's a breathtaking view, gourmet kitchen, or luxurious master suite. This data empowers you to understand your audience's preferences, optimize your marketing, and showcase the most desirable aspects of your property</p>
                 </div>
             </div>
         </div>
@@ -140,7 +127,7 @@
                 <div class="col-lg-5">
                     <h3 class="text-uppercase text-primary mb-3" style="letter-spacing: 2px;">Easy to Share</h3>
                     <h1 class="display-4 mb-3">Increased <span class="text-primary">Marketing Opportunities</span></h1>
-                    <p>Beyond the immersive experience, our virtual tours unlock a powerful marketing advantage. With a simple web link, you can instantly share the tour with your network, clients, colleagues, and potential buyers, eliminating the need for cumbersome email attachments or lengthy video uploads. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling a vibrant wave of interest and accelerating the sales process</p>
+                    <p>Our virtual tours provide a powerful marketing advantage - a simple web link allows you to instantly share the immersive experience with your network, clients, colleagues, and potential buyers. This frictionless sharing dramatically increases visibility, expands your reach, and transforms your property listing into a dynamic, easily-distributable asset, fueling interest and accelerating the sales process</p>
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted playsinline>
